--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Önenler yazılım"/>
+    <meta name="keywords" content="video,html,css,önenler yazılım,önenler video"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="author" content="Berkay ÖNEN"/>
+    <meta name="rating" content="general">
     <title>Anasayfa</title>
     <script src="https://kit.fontawesome.com/c20485228a.js" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet">
